feat: added main section and footer

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "src/components/Keyboard.jsx", "src/components/Keyboard.jsx", "src/components/Keyboard.jsx", "src/components/Keyboard.jsx"  ],
   "exclude": [
     "node_modules"
   ]
