--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.66.1",
+    "@react-three/fiber": "^8.13.0",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "@types/three": "^0.151.0",
     "autoprefixer": "10.4.14",
     "next": "13.3.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "three": "^0.152.2"
   },
   "devDependencies": {
     "typescript": "^5.0.4"
