--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.1",
     "@types/three": "^0.151.0",
     "autoprefixer": "10.4.14",
+    "framer-motion": "^10.12.4",
     "next": "13.3.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
