feat: added see more project card

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
       "@components/*": [
         "./src/components/*"
       ],
+      "@screen-components/*": [
+        "./src/screen-components/*"
+      ],
       "@assets/*": [
         "./public/assets/*"
       ]
